# Application/Frigorino.Web/ClientApp/src/lib/api/index.ts
@@ -22,8 +22,9 @@ export type { HouseholdRole } from './models/HouseholdRole';
 export type { HttpValidationProblemDetails } from './models/HttpValidationProblemDetails';
 export type { InventoryDto } from './models/InventoryDto';
 export type { InventoryItemDto } from './models/InventoryItemDto';
-export type { ListDto } from './models/ListDto';
+export type { ListCreatorResponse } from './models/ListCreatorResponse';
 export type { ListItemDto } from './models/ListItemDto';
+export type { ListResponse } from './models/ListResponse';
 export type { MemberResponse } from './models/MemberResponse';
 export type { ReorderItemRequest } from './models/ReorderItemRequest';
 export type { SetActiveHouseholdRequest } from './models/SetActiveHouseholdRequest';
